# batch_reference_check

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/: architecture.md  project_brief.md
src/: __main__.py  arxiv_client.py  cli.py  crossref_client.py  format_checker.py  models.py  pdf_extractor.py  pipeline.py  ref_parser.py  report.py  scholar_client.py
tests/: test_crossref_client.py  test_format_checker.py  test_ref_parser.py
