[project]
name = "checkrefs-batch"
version = "0.1.0"
description = "Batch reference checker for academic PDFs"
requires-python = ">=3.10"
dependencies = [
    "PyMuPDF>=1.24",
    "requests>=2.31",
    "click>=8.1",
]

[project.optional-dependencies]
scholar = ["scholarly>=1.7"]
dev = ["pytest>=8.0"]

[project.scripts]
checkrefs = "src.cli:main"
